--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,45 @@
 #
 #    pip-compile --output-file=requirements.txt pyproject.toml
 #
+alembic==1.10.4
+    # via flask-migrate
 blinker==1.6.2
     # via flask
 click==8.1.3
     # via flask
 flask==2.3.2
+    # via
+    #   flask-migrate
+    #   flask-sqlalchemy
+    #   flower-store (pyproject.toml)
+flask-migrate==4.0.4
     # via flower-store (pyproject.toml)
+flask-sqlalchemy==3.0.3
+    # via
+    #   flask-migrate
+    #   flower-store (pyproject.toml)
+greenlet==2.0.2
+    # via sqlalchemy
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
+mako==1.2.4
+    # via alembic
 markupsafe==2.1.2
     # via
     #   jinja2
+    #   mako
     #   werkzeug
+python-dotenv==1.0.0
+    # via flower-store (pyproject.toml)
+sqlalchemy==2.0.12
+    # via
+    #   alembic
+    #   flask-sqlalchemy
+typing-extensions==4.5.0
+    # via
+    #   alembic
+    #   sqlalchemy
 werkzeug==2.3.3
     # via flask
