--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ click==8.1.3
     # via flask
 flask==2.3.2
     # via
+    #   flask-assets
     #   flask-migrate
     #   flask-sqlalchemy
     #   flower-store (pyproject.toml)
+flask-assets==2.0
+    # via flower-store (pyproject.toml)
 flask-migrate==4.0.4
     # via flower-store (pyproject.toml)
 flask-sqlalchemy==3.0.3
@@ -44,5 +47,7 @@ typing-extensions==4.5.0
     # via
     #   alembic
     #   sqlalchemy
+webassets==2.0
+    # via flask-assets
 werkzeug==2.3.3
     # via flask
