--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "flask",
+    "flask-admin",
     "flask-assets",
     "flask-sqlalchemy",
     "flask-migrate",
