--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,13 @@ click==8.1.3
     # via flask
 flask==2.3.2
     # via
+    #   flask-admin
     #   flask-assets
     #   flask-migrate
     #   flask-sqlalchemy
     #   flower-store (pyproject.toml)
+flask-admin==1.6.1
+    # via flower-store (pyproject.toml)
 flask-assets==2.0
     # via flower-store (pyproject.toml)
 flask-migrate==4.0.4
@@ -37,6 +40,7 @@ markupsafe==2.1.2
     #   jinja2
     #   mako
     #   werkzeug
+    #   wtforms
 python-dotenv==1.0.0
     # via flower-store (pyproject.toml)
 sqlalchemy==2.0.12
@@ -51,3 +55,5 @@ webassets==2.0
     # via flask-assets
 werkzeug==2.3.3
     # via flask
+wtforms==3.0.1
+    # via flask-admin
