--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
     "flask",
     "flask-admin",
     "flask-assets",
-    "flask-sqlalchemy",
+    "flask-login",
     "flask-migrate",
+    "flask-sqlalchemy",
+    "flask-wtf",
     "python-dotenv",
 ]
 
