Add elasticsearch package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ description = "Store for selling flowers built on Flask."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "elasticsearch",
     "flask",
     "flask-admin",
     "flask-assets",
