Add ranunculus with image

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ src/flower_store/static/flower_imgs/*
 !src/flower_store/static/flower_imgs/default.png
 http_ca.crt
 
+**/.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
