--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,14 @@ alembic==1.10.4
     # via flask-migrate
 blinker==1.6.2
     # via flask
+certifi==2023.5.7
+    # via elastic-transport
 click==8.1.3
     # via flask
+elastic-transport==8.4.0
+    # via elasticsearch
+elasticsearch==8.8.0
+    # via flower-store (pyproject.toml)
 flask==2.3.2
     # via
     #   flask-admin
@@ -33,6 +39,10 @@ flask-sqlalchemy==3.0.3
     #   flower-store (pyproject.toml)
 flask-wtf==1.1.1
     # via flower-store (pyproject.toml)
+greenlet==2.0.2
+    # via sqlalchemy
+gunicorn==20.1.0
+    # via flower-store (pyproject.toml)
 itsdangerous==2.1.2
     # via
     #   flask
@@ -49,6 +59,8 @@ markupsafe==2.1.2
     #   wtforms
 pillow==9.5.0
     # via flower-store (pyproject.toml)
+psycopg2-binary==2.9.6
+    # via flower-store (pyproject.toml)
 pytailwindcss==0.1.4
     # via flower-store (pyproject.toml)
 python-dotenv==1.0.0
@@ -61,6 +73,8 @@ typing-extensions==4.5.0
     # via
     #   alembic
     #   sqlalchemy
+urllib3==1.26.16
+    # via elastic-transport
 webassets==2.0
     # via flask-assets
 werkzeug==2.3.3
@@ -71,3 +85,6 @@ wtforms==3.0.1
     # via
     #   flask-admin
     #   flask-wtf
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
